# segde-inventarios

./: .env.example  .gitignore  .replit  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_FIX.md  DEPLOYMENT_MANUAL_FIX.md  FORMATO_IMPORTACION_EXCEL.md  GIT_FLOW.md  RAILWAY_DEPLOY.md  SECURITY.md  bridge.env.example  bridge_ajustes_costos.py  check_last_dates.py  check_ti505.py  consolidado_report.py  email_ajustes_report.py  email_scheduler.py  import_ajustes_completo.py  import_data.py  import_firebase.py  import_rapido.py  package-lock.json  package.json  preview_reporte_ajustes.html  pyproject.toml  replit.md  replit.nix  reportes_sucursal.py  streamlit_app.py  test_minimal.py  test_streamlit.py  theme.json  update_ajustes.ts  update_data.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.streamlit/: config.toml
attached_assets/: 157ECOLOR_03-12-2025_1765383399413.doc  169_Items_Calendario_de_Muestreo_S.Luis_1765844892257.xlsx  240_Items_Calendario_de_Inventario_S.Juan_1765844148980.xlsx  260_Items_Calendario_de_Muestreo_TMza_1765840346407.xlsx  410_Items_Calendario_de_Inventario_Crisa2_1765845019207.xlsx  AJUSTES_CON_UNM_1769693447004.SQL  AJUSTES_SUCURSALES_1769185928975.xlsx  COSTOS_1769693447005.SQL  Pasted--BRIDGE-SQL-Sincronizaci-n-AJUSTES-y--1769694084195_1769694084195.txt  Pasted--BRIDGE-SQL-Sincronizaci-n-AJUSTES-y--1769697884341_1769697884341.txt  Pasted--Quiero-agregar-una-funcionalidad-de-Tour-Guiado-a-mi-a_1765392388798.txt  Pasted--identity-You-are-Replit-Assistant-embedded-in-this-Repl-identity-objective-Add-a-new-s-1761834383404_1761834383404.txt  (+45 more)
(+77 files in other folders)
