[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "docx>=0.2.4",
    "matplotlib>=3.10.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "python-docx>=1.1.2",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.39",
    "streamlit>=1.43.2",
]
